samples/_failures_safe/1761073515_fe6dc4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_743375f9.c: In function ‘main’:
./samples/SAFE/__tmp_743375f9.c:177:9: error: expected expression at end of input
  177 |         if (token.type == TOKEN_EOF)
      |         ^~
./samples/SAFE/__tmp_743375f9.c:177:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_743375f9.c:177:9: error: expected declaration or statement at end of input
